--- a/StudentDashboard/StudentDashboard.csproj
+++ b/StudentDashboard/StudentDashboard.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Student.cs" />
+    <Compile Include="Classes\User.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
